[tool.poetry]
name = "duck-duck"
version = "1.14.10"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "duck_duck"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.4"
django-environ = "^0.10.0"
djangorestframework = "^3.14.0"
psycopg2-binary = "^2.9.7"
django-import-export = "^3.2.0"
django-celery-beat = "^2.5.0"
redis = "^5.0.1"
httpx = "^0.25.0"
bs4 = "^0.0.1"
lxml = "^4.9.3"
fast-depends = "^2.2.8"
django-cors-headers = "^4.3.1"
drf-standardized-errors = "^0.14.1"
cloudinary = "^1.41.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.3.0"
factory-boy = "^3.3.0"
django-silk = "^5.0.3"
pytest-django = "^4.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.coverage.run]
omit = [
    "duck_duck/*",
    "manage.py",
]


[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "duck_duck.settings"
