[tool.poetry]
name = "secret-messages-consumer"
version = "1.0.0"
description = "Secret messages consumer"
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "secret_messages_consumer"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
