[tool.poetry]
name = "duck-duck-bot"
version = "1.0.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "telegram_bot_template"}]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^2.25.1"
redis = "^4.6.0"
pydantic = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
